<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true"
    tools:context=".ui.activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/streamview" />

        <TextView
            android:id="@+id/privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView2"
            android:layout_toLeftOf="@id/help"
            android:layout_marginEnd="19dp"
            android:layout_centerVertical="true"
            android:text="Privacy"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="19dp"
            android:text="Help"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="2">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/btn_google_sign"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        tools:ignore="RtlHardcoded" />


                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/btn_facebook_sign"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/state_list_drawable_text_input"
                        android:padding="@dimen/dp_5"
                        android:textColorHint="@color/white">

                        <EditText
                            android:id="@+id/ed_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@null"
                            android:hint="@string/email"
                            android:inputType="textWebEmailAddress"
                            android:padding="@dimen/dp_5"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="@dimen/sp_16" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/state_list_drawable_text_input"
                        android:padding="@dimen/dp_5"
                        android:textColorHint="@color/white"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/white">

                        <EditText
                            android:id="@+id/ed_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@null"
                            android:hint="@string/password"
                            android:inputType="textWebPassword"
                            android:padding="@dimen/dp_5"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="@dimen/sp_16" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/submit_btn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/drawable_white_border_rounded_rect"
                        android:text="@string/sign_in"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/forgot_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:padding="@dimen/dp_10"
                        android:text="@string/forgot_password"
                        android:textColor="@color/light_gray"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/join_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/button_corner"
                        android:text="@string/register"
                        android:textColor="@color/light_gray"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
